add profile setting page

--- a/client/assets/css/responsive.css
+++ b/client/assets/css/responsive.css
@@ -85,6 +85,11 @@
 
     /* body */
 
+    .setting_gender_select,
+    .setting_input {
+        width: 100%;
+    }
+
     .body-profile_avt {
         --width-avt: 170px;
     }
