--- a/client/assets/css/body.css
+++ b/client/assets/css/body.css
@@ -2,6 +2,91 @@
     margin-top: 80px;
 }
 
+#app-setting {
+    padding: 50px 0;
+}
+
+.mg-bottom-30 {
+    margin-bottom: 30px;
+}
+
+.setting_title {
+    padding: 10px 0;
+}
+
+.setting_title > span {
+    font-size: 1.4rem;
+    color: var(--primary-color-low);
+    
+}
+
+.setting_content {
+
+}
+
+.setting_gender_select,
+.setting_input {
+    width: 300px;
+    height: 36px;
+    font-size: 1.4rem;
+    color: var(--text-color);
+    line-height: 1.5;
+    padding: 0 10px;
+    outline: none;
+    border-radius: 4px;
+    border: 1px solid #d3d3d3;
+}
+
+
+.setting_about-me {
+
+}
+
+.setting_about-me_text {
+
+}
+
+.setting_email {
+
+}
+
+.setting_first-name {
+
+}
+
+.setting_last-name {
+
+}
+
+.setting_date-of-birth {
+
+}
+
+.setting_gender {
+
+}
+
+.setting_gender_select {
+    
+}
+
+#app-setting_save {
+    justify-content: center;
+}
+
+.setting-save_btn {
+    padding: 10px 12px;
+    border-radius: 4px;
+    font-size: 1.4rem;
+    cursor: pointer;
+    color: #fff;
+    background-color: var(--primary-color-low);
+}
+
+.setting-save_btn:hover {
+    background-color: var(--primary-color);
+}
+
 .body_background {
     background-repeat: no-repeat;
     background-size: cover;
@@ -210,6 +295,7 @@
     color: var(--primary-color-low);
 }
 
+.setting_about-me_text,
 .modal-description_type {
     padding: 10px;
     width: 100%;
