--- a/common/css/base.css
+++ b/common/css/base.css
@@ -8,6 +8,53 @@
     display: none !important;
 }
 
+.action {
+    display: flex;
+    align-items: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    position: relative;
+}
+
+.action-icon {
+    font-size: 1.8rem;
+    color: #999;
+    padding: 2px 10px 10px;
+}
+
+.action-icon:hover {
+    color: var(--text-color);
+}
+
+.action-box {
+    position: absolute;
+    bottom: -46px;
+    width: 72px;
+    left: -20px;
+    background-color: #fff;
+    border-radius: 6px;
+    box-shadow: 1px 2px 8px #999;
+    animation: fadeBox ease-out 0.2s;
+    display: none;
+}
+
+.action:hover .action-box {
+    display: block;
+}
+
+.action-item {
+    display: block;
+    font-size: 1rem;
+    text-align: center;
+    font-weight: 600;
+    padding: 4px 0;
+    cursor: default;
+}
+
+.action-item:hover {
+    background-color: #9999993d;
+}
+
 textarea {
     resize: none;
     column-count: unset;
