--- a/client/assets/css/responsive.css
+++ b/client/assets/css/responsive.css
@@ -55,6 +55,7 @@
 @media(min-width:501px) and (max-width: 739px) {
     
     .my-post_description,
+    .post_by-search_description,
     .post_by-category_description > p,
     .post-pin_description > p {
         -webkit-line-clamp: 1;
@@ -127,6 +128,7 @@
     }
 
     .my-post_title,
+    .post_by-search_title,
     .post_by-category_title,
     .post-pin_title {
         padding: 6px 0;
@@ -134,6 +136,7 @@
     }
 
     .my-post_link,
+    .post_by-search_link,
     .post_by-category_link,
     .post-pin_link {
         font-size: 1.6rem;
@@ -196,12 +199,14 @@
     }
 
     .my-post_description,
+    .post_by-search_description,
     .post_by-category_description,
     .post-pin_description {
         display: none;
     }
 
     .my-post_image,
+    .post_by-search_image,
     .post_by-category_image,
     .post-pin_image {
         padding-top: 100%;
