--- a/admin/assets/css/body.css
+++ b/admin/assets/css/body.css
@@ -50,15 +50,18 @@ tr:nth-child(even) {
     background-color: #dddddd;
 }
 
-.edit-btn {
-    color:rgb(68, 0, 255);
-    font-size: 1.2rem;
-    cursor: pointer;
-}
 
+.pin-btn,
 .remove-btn {
     color: #f35757;
     font-size: 1.2rem;
     margin-left: 10px;
+    cursor: pointer;
+}
+
+.pin-btn_active,
+.edit-btn {
+    color:rgb(68, 0, 255);
+    font-size: 1.2rem;
     cursor: pointer;
 }
