Change primary color

--- a/common/css/base.css
+++ b/common/css/base.css
@@ -1,6 +1,6 @@
 :root {
-    --primary-color: #6dd2d9;
-    --primary-color-low: #98eaf0;
+    --primary-color: #f0bf56;
+    --primary-color-low: #f0e998;
     --text-color: rgb(41, 41, 41);
 }
 
